# voxd

./: .gitignore  README.md  build_vulkan.sh  pyproject.toml  setup.sh  uninstall.sh
packaging/: install_voxd.sh  nfpm.yaml  postinstall.sh  voxd-tray.service  voxd.wrapper
src/voxd/: __main__.py  paths.py
src/voxd/core/: archive.py  clipboard.py  config.py  gemma_transcriber.py  llama_server_manager.py  recorder.py  typer.py  voxd_core.py
src/voxd/defaults/: default_config.yaml
src/voxd/tray/: tray_main.py
src/voxd/utils/: ipc_client.py  ipc_server.py  libw.py  setup_user.py
tests/: conftest.py  test_autostart.py  test_config.py  test_core_archive.py  test_core_recorder.py  test_core_typer.py  test_gemma_transcriber.py  test_ipc.py  test_main_routing.py  test_voxd_core_gemma.py
