[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "voxd"
version = "1.4.0"  # bump manually on releases
description = "Linux voice typing through an OpenAI-compatible Gemma E4B service"
authors = [{ name = "Jakov", email = "jakov.iv@proton.me" }]
requires-python = ">=3.9"
dependencies = [
  "sounddevice>=0.5",
  "pyqt6>=6.5",
  "platformdirs>=4.2",
  "pyyaml>=6.0",
  "pyperclip>=1.8",
  "numpy>=1.26",
  "requests>=2.28.0"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["venv",".venv","build","dist"]

[project.scripts]
voxd = "voxd.__main__:main"

[tool.hatch.build]
package-dir = "src"
include = ["src/voxd/assets/*.png","src/voxd/defaults/*.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/voxd"]

[tool.hatch.build.targets.editable]
packages = ["src/voxd"]
